0.8.0 (currently working on)
- [#2961] Fix: Remove the patch already checked in Bug 2936 from branch.
- [#2922] Feature: Hide the registration link in the list view when registration_begin_date is in future
- [#2488] Fix: Test failure testTypoScriptConfigurationIsLoaded
- [#2925] Feature: Show the organizers description in the single view, if not empty
- [#2954] Change: Move locallang_csh_seminars.xml to Resources/Private/Language/locallang_csh_seminars.xml
- [#1680] Remove the XCLASS for t3lib_tcemain
- [#2711] Fix: $BE_USER needs to be marked as global in tx_seminars_flexForms::__construct
- [#961] Change: Require TYPO3 4.2
- [#2952] Change: Move tca.php to Configuration/TCA/tca.php
- [#1142] Change: Require PHP 5.2
- [#2900] Change: Change the event-payment method relations to real m:n relations
- [#2947] Change: Move the HTML for the payment method list from the event model to the template
- [#2929] Change: Move notifyAttendee() and notifyOrganizers() to the registrationmanager
- [#2936] Feature: Add a flexform configuration for the Search Widget in the list view
- [#2946] Change: Replace tx_seminars_seminar::getAdditionalInformationRaw() with tx_seminars_seminar::getAdditionalInformation()
- [#2760] Change: Replace tx_seminars_seminar::getDescription() with tx_seminars_seminar::getDescriptionRaw()
- [#1740] Fix: Delete the editorcfg entry from ext_localconf.php plus the related files
- [#2873] Change: Refactor the registration functions in seminar and registrationManager classes
- [#2924] Feature: Add an RTE-field description to the seminar organizers
- [#2928] Feature: Add a getter for begin_date_registration in the new and old model class.
- [#2930] Fix: Remove all trigger_error() calls from tx_seminars_registration
- [#2921] Feature: Add the field registration_begin_date to the FE-Editor
- [#2920] Feature: Add a field registration_begin_date to the seminars table and the BE
- [#2910] Change: Move the flexforms XML file to Configuration/FlexForms